fixed refresh button z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -488,5 +488,5 @@ body{
     position: absolute;
     right: 200px;
     top: 35px;
-    z-index: 2000;
+    z-index: 2;
 }
